Clustering krustal done

--- a/Stanford_Online_Course2/Homework2/2_scale_same_method_as1.ipynb
+++ b/Stanford_Online_Course2/Homework2/2_scale_same_method_as1.ipynb
@@ -2,50 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "The distance between two nodes u and v in this problem is defined as the Hamming distance--- \n",
-    "the number of differing bits --- between the two nodes' labels. \n",
-    "For example, the Hamming distance between the 24-bit label of node \n",
-    "#2 above and the label \"0 1 0 0 0 1 0 0 0 1 0 1 1 1 1 1 1 0 1 0 0 1 0 1\" is 3 \n",
-    "(since they differ in the 3rd, 7th, and 21st bits).\n",
-    "\n",
-    "The question is: what is the largest value of k such that there is a k-clustering\n",
-    "    with spacing at least 3? That is, how many clusters are needed to ensure that \n",
-    "    no pair of nodes with all but 2 bits in common get split into different clusters? (\n",
-    "    That is to say merge all vertices that have a Hamming distance less or equal to 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "这道题的问题可以解释为：把所有Hamming Distance为0，1，2的点都聚合到一起，剩下多少个点？很自然地，\n",
-    "利用Union Find，把距离为0，1，2的点都union到一起，剩下的节点数就是结果。"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# idea source: http://m.blog.csdn.net/article/details?id=11859621"
+    "# Without this line, repeated work would be done:\n",
+    " #if member[index[v_list[i]]] != member[index[string]]:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -68,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -90,7 +59,7 @@
        "198788"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -120,35 +89,564 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false,
-    "scrolled": false
+    "collapsed": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26\n",
-      "46445\n",
-      "46445\n",
-      "46445\n",
-      "46445\n",
-      "46445\n",
-      "51333\n",
-      "11\n",
-      "2\n",
-      "70786\n",
-      "70788\n",
-      "3\n",
-      "77850\n",
-      "84097\n",
-      "87271\n",
-      "87271\n",
-      "9\n",
-      "9\n",
-      "92889\n"
+      "i 24000 26\n",
+      "i 25000 46445\n",
+      "i 25000 46445\n",
+      "i 25000 46445\n",
+      "i 25000 46445\n",
+      "i 25000 46445\n",
+      "i 26000 51333\n",
+      "i 27000 11\n",
+      "i 30000 2\n",
+      "i 31000 70786\n",
+      "i 31000 70788\n",
+      "i 32000 3\n",
+      "i 33000 77850\n",
+      "i 35000 84097\n",
+      "i 36000 87271\n",
+      "i 36000 87271\n",
+      "i 38000 9\n",
+      "i 38000 9\n",
+      "i 38000 92889\n",
+      "i 41000 100817\n",
+      "i 41000 100817\n",
+      "i 41000 100818\n",
+      "i 42000 103528\n",
+      "i 43000 105997\n",
+      "i 43000 105997\n",
+      "i 43000 105998\n",
+      "i 44000 108525\n",
+      "i 45000 110838\n",
+      "i 46000 113059\n",
+      "i 46000 113059\n",
+      "i 47000 115298\n",
+      "i 47000 115298\n",
+      "i 47000 115298\n",
+      "i 48000 117407\n",
+      "i 48000 117407\n",
+      "i 48000 117407\n",
+      "i 48000 117408\n",
+      "i 49000 119425\n",
+      "i 49000 119426\n",
+      "i 50000 121407\n",
+      "i 50000 121407\n",
+      "i 51000 123352\n",
+      "i 51000 123352\n",
+      "i 52000 125115\n",
+      "i 52000 125115\n",
+      "i 53000 127040\n",
+      "i 55000 130369\n",
+      "i 55000 130369\n",
+      "i 55000 130370\n",
+      "i 55000 130370\n",
+      "i 56000 131918\n",
+      "i 56000 131918\n",
+      "i 56000 131918\n",
+      "i 56000 131918\n",
+      "i 56000 131918\n",
+      "i 58000 135091\n",
+      "i 58000 135092\n",
+      "i 59000 136704\n",
+      "i 59000 136704\n",
+      "i 59000 136704\n",
+      "i 59000 136704\n",
+      "i 59000 136704\n",
+      "i 59000 136704\n",
+      "i 59000 136704\n",
+      "i 60000 16\n",
+      "i 61000 139783\n",
+      "i 61000 139783\n",
+      "i 61000 139783\n",
+      "i 61000 139784\n",
+      "i 62000 141150\n",
+      "i 63000 142545\n",
+      "i 63000 142546\n",
+      "i 64000 143860\n",
+      "i 65000 145217\n",
+      "i 66000 146483\n",
+      "i 66000 146483\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 66000 146485\n",
+      "i 67000 147622\n",
+      "i 67000 147622\n",
+      "i 68000 148831\n",
+      "i 68000 148831\n",
+      "i 68000 148831\n",
+      "i 68000 148831\n",
+      "i 68000 148831\n",
+      "i 68000 148831\n",
+      "i 68000 148832\n",
+      "i 69000 150063\n",
+      "i 70000 151250\n",
+      "i 70000 151250\n",
+      "i 70000 151250\n",
+      "i 70000 151250\n",
+      "i 70000 151250\n",
+      "i 71000 152430\n",
+      "i 71000 152430\n",
+      "i 72000 153540\n",
+      "i 72000 153540\n",
+      "i 73000 154625\n",
+      "i 73000 154626\n",
+      "i 74000 155665\n",
+      "i 74000 155665\n",
+      "i 74000 155665\n",
+      "i 75000 156706\n",
+      "i 75000 156707\n",
+      "i 75000 156707\n",
+      "i 76000 157753\n",
+      "i 76000 157753\n",
+      "i 76000 157753\n",
+      "i 76000 157753\n",
+      "i 76000 157753\n",
+      "i 77000 158688\n",
+      "i 77000 158688\n",
+      "i 77000 158689\n",
+      "i 77000 158689\n",
+      "i 79000 160567\n",
+      "i 79000 160567\n",
+      "i 79000 160567\n",
+      "i 81000 162330\n",
+      "i 82000 163105\n",
+      "i 82000 163105\n",
+      "i 83000 164015\n",
+      "i 83000 164015\n",
+      "i 83000 164015\n",
+      "i 83000 164015\n",
+      "i 84000 164697\n",
+      "i 84000 164697\n",
+      "i 85000 165490\n",
+      "i 85000 165492\n",
+      "i 85000 165492\n",
+      "i 86000 166326\n",
+      "i 86000 166326\n",
+      "i 87000 167046\n",
+      "i 87000 167047\n",
+      "i 88000 167813\n",
+      "i 89000 168477\n",
+      "i 90000 169176\n",
+      "i 90000 169176\n",
+      "i 90000 169176\n",
+      "i 90000 169176\n",
+      "i 90000 169176\n",
+      "i 91000 169782\n",
+      "i 91000 169783\n",
+      "i 91000 169783\n",
+      "i 91000 169783\n",
+      "i 91000 169783\n",
+      "i 91000 169783\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 92000 170481\n",
+      "i 93000 171123\n",
+      "i 93000 171123\n",
+      "i 93000 171123\n",
+      "i 93000 171123\n",
+      "i 93000 171123\n",
+      "i 94000 171792\n",
+      "i 94000 171792\n",
+      "i 94000 171792\n",
+      "i 95000 172402\n",
+      "i 95000 172402\n",
+      "i 95000 172402\n",
+      "i 95000 172402\n",
+      "i 95000 172402\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 96000 172973\n",
+      "i 97000 173539\n",
+      "i 97000 173540\n",
+      "i 98000 174088\n",
+      "i 98000 174088\n",
+      "i 98000 174088\n",
+      "i 98000 174089\n",
+      "i 98000 174089\n",
+      "i 98000 174089\n",
+      "i 98000 174089\n",
+      "i 100000 175167\n",
+      "i 100000 175169\n",
+      "i 100000 175169\n",
+      "i 101000 175674\n",
+      "i 101000 175674\n",
+      "i 101000 175674\n",
+      "i 101000 175674\n",
+      "i 101000 175674\n",
+      "i 102000 176210\n",
+      "i 102000 176210\n",
+      "i 102000 176210\n",
+      "i 102000 176210\n",
+      "i 102000 176210\n",
+      "i 102000 176210\n",
+      "i 103000 176678\n",
+      "i 103000 176678\n",
+      "i 104000 177109\n",
+      "i 104000 177109\n",
+      "i 104000 177109\n",
+      "i 104000 177109\n",
+      "i 104000 177109\n",
+      "i 105000 177623\n",
+      "i 105000 177623\n",
+      "i 105000 177623\n",
+      "i 106000 178070\n",
+      "i 106000 178070\n",
+      "i 106000 178070\n",
+      "i 107000 178505\n",
+      "i 107000 178505\n",
+      "i 107000 178505\n",
+      "i 108000 178922\n",
+      "i 108000 178922\n",
+      "i 108000 178922\n",
+      "i 109000 179324\n",
+      "i 109000 179324\n",
+      "i 109000 179324\n",
+      "i 109000 179324\n",
+      "i 109000 179324\n",
+      "i 109000 179324\n",
+      "i 111000 180146\n",
+      "i 112000 180499\n",
+      "i 112000 180499\n",
+      "i 112000 180499\n",
+      "i 112000 180499\n",
+      "i 113000 180884\n",
+      "i 113000 180884\n",
+      "i 113000 180884\n",
+      "i 114000 181233\n",
+      "i 114000 181233\n",
+      "i 114000 181233\n",
+      "i 114000 181233\n",
+      "i 114000 181233\n",
+      "i 114000 181233\n",
+      "i 115000 181625\n",
+      "i 115000 181625\n",
+      "i 115000 181625\n",
+      "i 115000 181625\n",
+      "i 115000 181625\n",
+      "i 116000 181939\n",
+      "i 116000 181939\n",
+      "i 116000 181939\n",
+      "i 116000 181939\n",
+      "i 116000 181939\n",
+      "i 116000 181939\n",
+      "i 119000 182989\n",
+      "i 119000 182989\n",
+      "i 119000 182989\n",
+      "i 119000 182989\n",
+      "i 119000 182989\n",
+      "i 119000 182989\n",
+      "i 119000 182989\n",
+      "i 120000 183304\n",
+      "i 120000 183304\n",
+      "i 120000 183304\n",
+      "i 121000 183571\n",
+      "i 122000 183862\n",
+      "i 122000 183862\n",
+      "i 122000 183862\n",
+      "i 122000 183862\n",
+      "i 122000 183862\n",
+      "i 123000 184161\n",
+      "i 123000 184161\n",
+      "i 123000 184161\n",
+      "i 123000 184161\n",
+      "i 123000 184161\n",
+      "i 123000 184161\n",
+      "i 124000 184441\n",
+      "i 124000 184441\n",
+      "i 124000 184443\n",
+      "i 124000 184443\n",
+      "i 124000 184443\n",
+      "i 125000 184700\n",
+      "i 125000 184700\n",
+      "i 127000 185245\n",
+      "i 127000 185245\n",
+      "i 127000 185245\n",
+      "i 127000 185245\n",
+      "i 127000 185245\n",
+      "i 128000 185474\n",
+      "i 128000 185474\n",
+      "i 128000 185474\n",
+      "i 128000 185474\n",
+      "i 128000 185474\n",
+      "i 128000 185474\n",
+      "i 130000 185964\n",
+      "i 130000 185964\n",
+      "i 130000 185964\n",
+      "i 130000 185964\n",
+      "i 131000 186211\n",
+      "i 131000 186211\n",
+      "i 131000 186211\n",
+      "i 131000 186211\n",
+      "i 132000 186451\n",
+      "i 132000 186451\n",
+      "i 132000 186451\n",
+      "i 132000 186451\n",
+      "i 132000 186451\n",
+      "i 132000 186451\n",
+      "i 133000 186646\n",
+      "i 133000 186646\n",
+      "i 133000 186646\n",
+      "i 135000 187085\n",
+      "i 135000 187085\n",
+      "i 135000 187085\n",
+      "i 135000 187085\n",
+      "i 136000 187298\n",
+      "i 136000 187298\n",
+      "i 136000 187298\n",
+      "i 136000 187298\n",
+      "i 136000 187298\n",
+      "i 137000 187501\n",
+      "i 137000 187501\n",
+      "i 137000 187501\n",
+      "i 137000 187501\n",
+      "i 137000 187501\n",
+      "i 137000 187501\n",
+      "i 137000 187501\n",
+      "i 138000 187680\n",
+      "i 138000 187681\n",
+      "i 138000 187681\n",
+      "i 138000 187681\n",
+      "i 139000 187869\n",
+      "i 139000 187869\n",
+      "i 139000 187869\n",
+      "i 139000 187869\n",
+      "i 139000 187869\n",
+      "i 139000 187869\n",
+      "i 140000 188053\n",
+      "i 140000 188053\n",
+      "i 140000 188053\n",
+      "i 141000 188236\n",
+      "i 141000 188236\n",
+      "i 141000 188236\n",
+      "i 142000 188378\n",
+      "i 142000 188378\n",
+      "i 142000 188378\n",
+      "i 142000 188378\n",
+      "i 142000 188378\n",
+      "i 143000 188545\n",
+      "i 143000 188545\n",
+      "i 143000 188545\n",
+      "i 143000 188545\n",
+      "i 143000 188545\n",
+      "i 144000 188688\n",
+      "i 144000 188688\n",
+      "i 145000 188848\n",
+      "i 145000 188848\n",
+      "i 145000 188848\n",
+      "i 145000 188848\n",
+      "i 146000 188992\n",
+      "i 146000 188992\n",
+      "i 146000 188992\n",
+      "i 147000 189132\n",
+      "i 147000 189132\n",
+      "i 147000 189132\n",
+      "i 148000 189266\n",
+      "i 148000 189266\n",
+      "i 149000 189395\n",
+      "i 149000 189395\n",
+      "i 150000 189523\n",
+      "i 150000 189523\n",
+      "i 151000 189642\n",
+      "i 152000 189769\n",
+      "i 152000 189769\n",
+      "i 152000 189769\n",
+      "i 152000 189769\n",
+      "i 152000 189769\n",
+      "i 153000 189875\n",
+      "i 153000 189875\n",
+      "i 153000 189875\n",
+      "i 153000 189875\n",
+      "i 154000 189980\n",
+      "i 154000 189980\n",
+      "i 154000 189980\n",
+      "i 155000 190077\n",
+      "i 155000 190077\n",
+      "i 155000 190077\n",
+      "i 155000 190077\n",
+      "i 155000 190077\n",
+      "i 156000 190175\n",
+      "i 156000 190175\n",
+      "i 156000 190175\n",
+      "i 156000 190175\n",
+      "i 156000 190175\n",
+      "i 158000 190353\n",
+      "i 158000 190353\n",
+      "i 158000 190353\n",
+      "i 159000 190447\n",
+      "i 159000 190447\n",
+      "i 159000 190447\n",
+      "i 159000 190447\n",
+      "i 160000 190534\n",
+      "i 160000 190534\n",
+      "i 160000 190534\n",
+      "i 160000 190534\n",
+      "i 160000 190534\n",
+      "i 161000 190615\n",
+      "i 161000 190615\n",
+      "i 161000 190615\n",
+      "i 161000 190615\n",
+      "i 162000 190700\n",
+      "i 162000 190700\n",
+      "i 164000 190845\n",
+      "i 164000 190845\n",
+      "i 164000 190845\n",
+      "i 164000 190845\n",
+      "i 164000 190845\n",
+      "i 164000 190845\n",
+      "i 165000 190900\n",
+      "i 165000 190900\n",
+      "i 165000 190900\n",
+      "i 165000 190900\n",
+      "i 165000 190900\n",
+      "i 166000 190962\n",
+      "i 166000 190962\n",
+      "i 166000 190962\n",
+      "i 166000 190962\n",
+      "i 166000 190962\n",
+      "i 167000 191045\n",
+      "i 167000 191045\n",
+      "i 167000 191045\n",
+      "i 168000 191107\n",
+      "i 168000 191107\n",
+      "i 168000 191107\n",
+      "i 169000 191157\n",
+      "i 169000 191157\n",
+      "i 169000 191157\n",
+      "i 169000 191157\n",
+      "i 170000 191189\n",
+      "i 170000 191189\n",
+      "i 170000 191189\n",
+      "i 170000 191189\n",
+      "i 170000 191189\n",
+      "i 171000 191247\n",
+      "i 172000 191289\n",
+      "i 172000 191289\n",
+      "i 173000 191322\n",
+      "i 173000 191322\n",
+      "i 173000 191322\n",
+      "i 174000 191374\n",
+      "i 174000 191374\n",
+      "i 174000 191374\n",
+      "i 175000 191410\n",
+      "i 175000 191410\n",
+      "i 175000 191410\n",
+      "i 176000 191463\n",
+      "i 176000 191463\n",
+      "i 176000 191463\n",
+      "i 177000 191494\n",
+      "i 177000 191494\n",
+      "i 177000 191494\n",
+      "i 177000 191494\n",
+      "i 177000 191494\n",
+      "i 178000 191533\n",
+      "i 178000 191533\n",
+      "i 178000 191533\n",
+      "i 178000 191533\n",
+      "i 178000 191533\n",
+      "i 178000 191533\n",
+      "i 178000 191533\n",
+      "i 179000 191567\n",
+      "i 179000 191567\n",
+      "i 179000 191567\n",
+      "i 179000 191567\n",
+      "i 179000 191567\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 180000 191621\n",
+      "i 182000 191656\n",
+      "i 182000 191656\n",
+      "i 182000 191656\n",
+      "i 182000 191656\n",
+      "i 182000 191656\n",
+      "i 183000 191681\n",
+      "i 183000 191681\n",
+      "i 183000 191681\n",
+      "i 183000 191681\n",
+      "i 184000 191712\n",
+      "i 184000 191712\n",
+      "i 184000 191712\n",
+      "i 184000 191712\n",
+      "i 184000 191712\n",
+      "i 185000 191731\n",
+      "i 185000 191731\n",
+      "i 185000 191731\n",
+      "i 186000 191743\n",
+      "i 186000 191743\n",
+      "i 186000 191743\n",
+      "i 186000 191743\n",
+      "i 186000 191743\n",
+      "i 186000 191743\n",
+      "i 187000 191765\n",
+      "i 187000 191765\n",
+      "i 188000 191789\n",
+      "i 188000 191789\n",
+      "i 188000 191789\n",
+      "i 189000 191813\n",
+      "i 189000 191813\n",
+      "i 190000 191829\n",
+      "i 190000 191829\n",
+      "i 190000 191829\n",
+      "i 190000 191829\n",
+      "i 191000 191843\n",
+      "i 191000 191843\n",
+      "i 191000 191843\n",
+      "i 191000 191843\n",
+      "i 191000 191843\n",
+      "i 191000 191843\n",
+      "i 192000 191848\n",
+      "i 192000 191848\n",
+      "i 192000 191848\n",
+      "i 192000 191848\n",
+      "i 193000 191856\n",
+      "i 193000 191856\n",
+      "i 194000 191862\n",
+      "i 194000 191862\n",
+      "i 194000 191862\n",
+      "i 194000 191862\n",
+      "i 194000 191862\n",
+      "i 194000 191862\n",
+      "i 196000 191871\n",
+      "i 196000 191871\n",
+      "i 196000 191871\n",
+      "i 197000 191875\n",
+      "i 197000 191875\n",
+      "i 197000 191875\n",
+      "i 197000 191875\n",
+      "i 197000 191875\n",
+      "i 198000 191879\n",
+      "i 198000 191879\n"
      ]
     }
    ],
@@ -177,16 +675,27 @@
     "        else: \n",
     "            if i%1000 ==0:\n",
     "                if i>20000:\n",
-    "                    print min(len(cluster[member[index[v_list[i]]]]), len(cluster[member[index[string]]]))\n"
+    "                    print \"i\",i,min(len(cluster[member[index[v_list[i]]]]), len(cluster[member[index[string]]]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6118"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(set([member[key] for key in member.keys()]))"
    ]
@@ -217,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
