Johnson's algorithm: the index of vertices, 0 or 1

--- a/Stanford_Course4/homework1/code/BellmanFord_Sanity.ipynb
+++ b/Stanford_Course4/homework1/code/BellmanFord_Sanity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -107,15 +107,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "10\n",
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n",
+      "110\n",
+      "120\n",
+      "130\n",
+      "140\n",
+      "150\n",
+      "160\n",
+      "170\n",
+      "180\n",
+      "190\n",
+      "200\n",
+      "210\n",
+      "220\n",
+      "230\n",
+      "240\n",
+      "250\n",
+      "260\n",
+      "270\n",
+      "280\n",
+      "290\n",
+      "300\n",
+      "310\n",
+      "320\n",
+      "330\n",
+      "340\n",
+      "350\n",
+      "360\n",
+      "370\n",
+      "380\n",
+      "390\n",
+      "400\n",
+      "410\n",
+      "420\n",
+      "430\n",
+      "440\n",
+      "450\n",
+      "460\n",
+      "470\n",
+      "480\n",
+      "490\n",
+      "500\n",
+      "510\n",
+      "520\n",
+      "530\n",
+      "540\n",
+      "550\n",
+      "560\n",
+      "570\n",
+      "580\n",
+      "590\n",
+      "600\n",
+      "610\n",
+      "620\n",
+      "630\n",
+      "640\n",
+      "650\n",
+      "660\n",
+      "670\n",
+      "680\n",
+      "690\n",
+      "700\n",
+      "710\n",
+      "720\n",
+      "730\n",
+      "740\n",
+      "750\n",
+      "760\n",
+      "770\n",
+      "780\n",
+      "790\n",
+      "800\n",
+      "810\n",
+      "820\n",
+      "830\n",
+      "840\n",
+      "850\n",
+      "860\n",
+      "870\n",
+      "880\n",
+      "890\n",
+      "900\n",
+      "910\n",
+      "920\n",
+      "930\n",
+      "940\n",
+      "950\n",
+      "960\n",
+      "970\n",
+      "980\n",
+      "990\n"
+     ]
+    }
+   ],
    "source": [
     "short = float(\"inf\")\n",
     "for i in range(n):\n",
+    "    if i%50 ==0:\n",
+    "        print i\n",
     "    short = min(short,min(BellmanFord(G,i,n)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-19"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "short"
    ]
   }
  ],
@@ -135,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
