* and append use shallow copy when building nested list; find the entrance and exist of a cluster of cities

--- a/Stanford_Course4/homework2/code/Solution 2.ipynb
+++ b/Stanford_Course4/homework2/code/Solution 2.ipynb
@@ -13,6 +13,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "https://github.com/yashtc/Algo2/blob/master/PA%205/Q1.cpp"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": false
@@ -118,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
